--- a/src/ui/src/main/resources/templates/home.html
+++ b/src/ui/src/main/resources/templates/home.html
@@ -200,7 +200,7 @@
           class="text-center mb-4 text-sm text-gray-400"
           th:if="${!disableDemoWarnings}"
         >
-          These products are for demonstration purposes only
+          This site is create d by Sagar just for CI/CD Test purpose only
         </div>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
           <!-- Product Card -->
